# dotfiles

./: .gitignore  aa.py  aa_jp.md
dots/: Xmodmap  atcodertools.toml  bash_profile  gitconfig  globalrc  gvimrc  jp_textlintrc  plasma.desktop  rcrc  sshrc  textlintrc  tmux.conf  vimrc
dots/auto-start/: arch_start.sh
dots/bspwm/: bspwmrc
dots/config/: .config  Microsoft.PowerShell_profile.ps1  gitconfig
dots/kaggle/: kaggle
dots/my_dict/: yaskkserv2.conf
dots/signate/: signate.json
dots/skk/: aa_jp.md  google_chacke.cache  linux_yaskkserv2.conf  skk.xml  win_yaskkserv2.conf  yaskkserv2.conf
dots/sxhkd/: sxhkdrc
dots/vim/: .netrwhist  .vim  aa.py  coc-settings.json  gui.vim  gvimrc  init.vim  yobi.json
dots/windows/: Microsoft.PowerShell_profile.ps1  Untitled-2.txt  aa.cmd  init.cmd  init.macros  install.txt  kensintone.json  windows_terminal_settings.json  zisyo.md
init/: Makefile  apts.csv  codium.sh  docker.sh  font_install.sh  ghq.sh  gitkraken.sh  init.sh  install.sh  kaoriya_downloads.ps1  kaoriya_expansion.ps1  npmlist.txt  packages.config  piplist.txt  test.py  vivaldi.sh  wsl_skk_init.sh
init/apps/: alacritty_debian.sh  arch.sh  ccls_install.sh  code_debian.sh  cuda_debian.sh  docker_debian.sh  fish.sh  go.sh  godmode.ps1  google-chrome_debain.sh  google-ime-skk.sh  install2r.sh  piplist.txt  setting_darwin.sh  setting_debian.sh  skk_debian.sh  wine.sh  wsl_docker.sh
init/arch/: arch.sh  arch_init.sh  first_setup_arch.sh  install.txt  setup_arch.sh
init/common/: any_env.sh  go_env.sh  test.sh
init/key_conf/: autohotkey.ahk  blender.synapse3  kindle.cfg  so.txt  ubunt_compiz.profile  vlc_ubuntu.joystick.amgp  voltex_core.ahk
init/library_install/: aa.sh  aa.txt  ale_setup.sh  coc.sh  font_install.sh  go_env.sh  npm_install.sh  piplist.txt
init/linux/: font.sh  link.sh
init/win_option/: aaa.ps1  initialize.ps1  layout.cys  layout_base.txt  package.config  shell.ps1  small_link.ps1  soope_setup.ps1  test_admin.ps1
memo/: aa.py  atcodertools_python.toml  browser_keymap.md  import_config.nayvy  pyproject.toml  surfingkey.js
memo/alacritty/: alacritty.yml
memo/autostart/: fcitx.desktop  polybar.desktop  xkeysnail.sh
memo/fcitx5/: config
memo/i3/: config
memo/i3blocks/: config
memo/init/: master.sh
memo/scoop/: config.json  scoop_list.txt
scripts/: sands.sh
template/: pyproject.toml
(+1179 files in other folders)
